--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,49 +1,20 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>ログイン</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="../webjars/bootstrap/4.1/css/bootstrap.min.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/style.css" type="text/css"/>
-    <!--[if lt IE 9]>
-    <script type="text/javascript" src="../javascript/ie8/html5shiv.js"></script>
-    <script type="text/javascript" src="../javascript/ie8/respond.js"></script>
-    <script type="text/javascript" src="../javascript/ie8/jquery-1.11.3.min.js"></script>
-    <![endif]-->
-    <!--[if gte IE 9]><!-->
-    <script type="text/javascript" src="../webjars/jquery/2.1.4/jquery.min.js"></script>
-    <!--<![endif]-->
-    <script type="text/javascript" src="../webjars/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <title>Spring Security Example </title>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <p><h1 id="title">ログイン</h1></p>
-    </div>
-    <div class="row">
-        <div class="col-md-3 col-lg-3"></div>
-        <div class="col-md-6 col-lg-6">
-            <div class="well well-sm">
-                <form id="login_form" method="post" th:action="@{'/login'}">
-                    <fieldset id="login_field">
-                        <div class="form-group">
-                            <label>ログインID</label>
-                            <input type="text" class="form-control" id="login_id" name="login_id" placeholder="ログインIDを入力してください" autofocus="" required="" />
-                        </div>
-                        <div class="form-group">
-                            <label>パスワード</label>
-                            <input type="password" class="form-control" id="login_password" name="login_password" placeholder="パスワードを入力してください" required="" />
-                        </div>
-                        <div class="form-group">
-                            <input id="login_button" type="submit" value="ログイン" />
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-        </div>
-        <div class="col-md-3 col-lg-3"></div>
-    </div>
+<div th:if="${param.error}">
+    Invalid username and password.
 </div>
+<div th:if="${param.logout}">
+    You have been logged out.
+</div>
+<form th:action="@{/login}" method="post">
+    <div><label> User Name : <input type="text" name="username"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Sign In"/></div>
+</form>
 </body>
 </html>
